src/styles/style.css
@font-face {
  font-family: 'apercu-regular-pro';
  src: url('../fonts/apercu-regular-pro.eot');
  src: url('../fonts/apercu-regular-pro.eot?#iefix') format('embedded-opentype'),
       url('../fonts/apercu-regular-pro.woff2') format('woff2'),
       url('../fonts/apercu-regular-pro.woff') format('woff'),
       url('../fonts/apercu-regular-pro.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

:root {
    /*Define Colors as Colors*/
    --primary: #FDE1E0;
    --secondary: #E97B7C;
    --black: #000400;
    --white: #FFFFFF;
    --grey: #666666;
    --lightGrey: #9A9B9F;
    --lightestGrey: #F2F2F2;

    /* Define Colors Intentions*/
    --active: var(--secondary);
    --background: var(--white);
    --textColor: var(--black);
    --buttonTextColor: var(--black);
    --footerTextColor: var(--lightGrey);
    --lineColor: var(--grey);
    --danger: var(--red);
    --buttonColor: var(--primary);
    --headerBackground: var(--white);
    --footerBackground: var(--white);
    --transparent:rgba(52,52,52,0.0);
    --cardBg: var(--white);

    /* Styles */
    --line: solid 1px var(--lineColor);

    /* Type */
    --headingFont: 'apercu-regular-pro', Sans-Serif;
    --bodyFont: 'apercu-regular-pro', Sans-Serif;
    --baseFontSize: 100%; /*18px*/
    --h1: 3.052em;
    --h2: 2.441em;
    --h3: 1.953em;
    --h4: .75em;
    --h5: 1.25em;
    --largeText: 1.35rem;
    --mediumText: 1.15rem;
    --mediumSmallText: .95rem;
    --smallText:.6rem;
    --tinyText: .65rem;
    --fontWeigthThin: 100; 
    --fontWeightMedium: 500;
    --fontWeightBold: 600;

    /* Elevation */
    --level-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
    --level-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
    --level-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
    --level-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);

    /* Positioning */
    --containerPadding: 2.5%;
    --headerHeight: 3rem;
    --borderRadius: 10px;

    max-width: 1920px;
    margin-left: auto;
    margin-right: auto;
}

/*  From TypeScale*/
html {
  font-size: var(--baseFontSize);
  box-sizing: border-box;
  /* overflow-y: scroll; */
} 

*{
  box-sizing: border-box;
},
*::before,
*::after {
  box-sizing: border-box;
}

a {
  color: var(--black);
  font-size: 1.2rem;
  font-weight: 900;
  text-decoration: none;
}

a:hover {
  border-bottom: 2px solid var(--black);
}

body {
    font-family: var(--bodyFont);
    font-weight: 400;
    line-height: 1.65;
    background: var(--background);
    color: var(--textColor);
    position:relative;
    height: 100%;
}

body.modal-open {
  overflow: hidden;
}


header {
  background-color: var(--headerBackground);
  box-shadow: var(--level-2);
  color: white;
  height: var(--headerHeight);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 var(--containerPadding);
}

header nav a {
  color: white;
  text-decoration: none;
}

header nav a + a {
  margin-left: 10px;
}

footer {
  color: var(--footerTextColor);
  padding: 2rem var(--containerPadding);
  text-align: center;
  position: absolute;
  bottom: 0;
  width: 100%;
}

footer a {
  color: var(--footerTextColor);
}

footer p {
  margin-bottom: 0;
  max-width: none;
}

p {
  margin-bottom: 1.15rem;
  max-width: 60em;
}

p a,
blockquote a {
  text-decoration: none;
  color: var(--textColor);
  border-bottom: 3px solid var(--primary);
}

h1, h2, h3, h4, h5 {
  margin: 2.75rem 0 1.05rem;
  font-family: var(--headingFont);
  font-weight: 400;
  line-height: 1.15;
}

h1 {
  margin-top: 0;
  font-size: var(--h1);
}

h2 {font-size: var(--h2)};

h3 {font-size: var(--h3)};

h4 {font-size: var(--h4)};

h5 {font-size: var(--h5)};

small, .text_small {font-size: var(--smallText);}

/* End typescale */

blockquote {
  margin: 10px;
  padding: 2em;
  background-color: var(--cardBg);
  box-shadow: var(--level-2);
}

label {
  display: block;
  font-size: var(--smallText);
}

input, 
textarea {
  padding: 2px 5px;
  border: var(--line);
  border-radius: 4px;
}

textarea {
  width: 100%;
  height: 5rem;
}

::placeholder {
  color: var(--lightGrey);
}

select {
  border: var(--line);
}

hr {
  border-top: var(--line);
}

/* Layout */

@media only screen and (max-width: 750px) {

}

@media only screen and (min-width: 500px) {
  :root {
    --baseFontSize: 112.5%;
  }
    .grid {
      display: grid;
    }
    .flex {
      display: flex;
    }
}

.dark {
    --cardBg: var(--darkBlue);
    --textColor: var(--lightGrey);
    --headerBackground: var(--black);
    --footerBackground: var(--black);
    --background: var(--black);
    --buttonTextColor: var(--black);
}

